--- a/css/header.css
+++ b/css/header.css
@@ -65,7 +65,7 @@
     position: relative;
 }
 
-.menu__link:hover{
+.menu__link:hover {
     color: var(--or-light);
 }
 
@@ -82,6 +82,27 @@
     transition: 0.3s;
 }
 
-.menu__link:hover.menu__link::after{
+.menu__link:hover.menu__link::after {
     width: 100%;
+}
+
+
+
+@media screen and (max-width:768px) {
+    .nav__wrap {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .menu__link::after {
+        bottom: -29px;
+    }
+}
+
+@media screen and (max-width:360px) {
+    .nav__menu {
+        gap: 15px;
+    }
 }
