--- a/css/films.css
+++ b/css/films.css
@@ -14,9 +14,25 @@
     height: 367px;
     border-radius: 6px;
     padding: 54px 14px 18px;
+    transition: 0.3s;
+
+}
+
+.film__card:hover {
+    transform: scale(1.3);
+    z-index: 100;
+}
+
+.film__card:hover .card__body {
+    opacity: 1;
+}
+
+.card__body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 0.3s;
+    opacity: 0;
 }
 
 .card__img {
@@ -77,5 +93,5 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-    
+
 }
